Prevent images bigger than the main content from overflowing (especially in the forums).

--- a/webapp/byceps/blueprints/core/static/style/style.css
+++ b/webapp/byceps/blueprints/core/static/style/style.css
@@ -360,6 +360,10 @@ nav.board-breadcrumbs li:last-child {
 
 /* misc */
 
+main img {
+  max-width: 100%;
+}
+
 .hidden {
   opacity: 0.5;
 }
